# Mongodex

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
migrations/: 001_create_connections_table.sql
src/: cli.rs  connection_info.rs  connection_target.rs  error.rs  guardian.rs  main.rs  sqlite.rs
src/command/: connection_add.rs  connection_edit.rs  connection_list.rs  connection_remove.rs  connection_show.rs  dump.rs  listdatabases.rs  migrate.rs  mod.rs  restore.rs  shell.rs
src/connection/: database.rs  mod.rs  repository.rs  server.rs
src/subcommands/: connection.rs  dump.rs  listdatabases.rs  migrate.rs  mod.rs  restore.rs  shell.rs
