[package]
name = "mongodex"
version = "0.1.0"
authors = ["Noah Shuart <shuart.noah.s@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
sled = "0.31"
bincode = "1.2"
serde = { version = "1.0", features = ["derive"] }
dialoguer = "0.6"
thiserror = "1.0"
lazy_static = "1.4"
os_pipe = "0.9"
directories = "2.0"
mongodb = { version = "0.10", default-features = false, features = ["sync"] }

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'